syntax = "proto3";

package user;

option go_package = "proto/user";

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string created_at = 5;
}

message UserRequest {
    User user = 1;
}

message UserResponse {
    User user = 1;
}

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    bool success = 2;
}

message UserID {
    string id = 1;
}

message UserProfile {
    string id = 1;
    string username = 2;
    string email = 3;
}

service UserService {
    rpc RegisterUser(UserRequest) returns (UserResponse);
    rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
    rpc GetUserProfile(UserID) returns (UserProfile);
}